# ChePP

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bitboard.cpp.347E3DBD744552AA.idx  bitboard.h.05DAF2D0FCC3C316.idx  magics.cpp.D236388286CE7DDB.idx  magics.h.FFDBAA6E914F63E6.idx  main.cpp.E8766CC10AB5150D.idx  types.h.BC7F3537D7CEE12C.idx
engine/: CMakeLists.txt
engine/gtests/: CMakeLists.txt  perft_tests.cpp  repetitions_test.cpp  zobrist_tests.cpp
engine/include/ChePP/engine/: UCI.h  bitboard.h  castle.h  eval.h  history.h  move.h  move_ordering.h  movegen.h  nnue.h  pgn.h  position.h  prng.h  search.h  tm.h  tt.h  types.h  zobrist.h
engine/resources/: format.txt
engine/scripts/: bin2h.cpp
engine/src/: benchmark.cpp  bitboard.cpp  main.cpp  position.cpp  tt.cpp  types.cpp  zobrist.cpp
gtests/: CMakeLists.txt  perft_tests.cpp  repetitions_test.cpp  zobrist_tests.cpp
include/ChePP/: bitboard.h  castle.h  eval.h  move.h  move_ordering.h  movegen.h  nnue.h  position.h  prng.h  search.h  tb.h  tt.h  types.h  zobrist.h
scripts/: bin2c.c
src/: CMakeLists.txt  bitboard  bitboard.cpp  bitboard.h  castle.h  magics.cpp  magics.h  main.cpp  move.h  movegen.h  pnrg.h  position.cpp  position.h  prng.h  tt.cpp  types.h  zobrist.cpp  zobrist.h
test/simd/: operations.h  traits.h
test/simd/src/: main.cpp
tests/: CMakeLists.txt  bitboard_tests.cpp
